--- a/bio.html
+++ b/bio.html
@@ -12,6 +12,7 @@
 
 <!-- Other head properties -->
 <title>About David Landry</title>
+<link rel="icon" href="circuit.png">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="David Landry">
 </head>
