--- a/bio.html
+++ b/bio.html
@@ -20,21 +20,21 @@
 
 <body>
 <!-- Header -->
-<div class="header">
+<div id="header">
 <h1>Landarian Labs</h1>
 </div>
 
 
 <!-- Navbar -->
-<div class="navbar">
+<div id="navbar">
 <a href="index.html">Home</a><a href="resume.html">Resume</a><a href="blog.html">Blog</a><a href="portfolio/index.html">Portfolio</a><a href="interactive/index.html">Interactive Stuff</a><a href="contact.html">Contact us</a>
 </div>
 
 
 <!-- Main body -->
-<div class="row">
+<div id="row">
 	<!-- Side bar -->
-	<div class="side">
+	<div id="side">
 	<h3 class="text"><a href="landarian.html">Landarian Labs</a></h3>
 	<p class="text">More information about the history and purpose of Landarian Labs.</p>
     <hr>
@@ -48,10 +48,10 @@
 	
 	
 	<!-- Main content -->
-	<div class="main">
+	<div id="main">
 	<h2 class="text">David Landry's Bio</h2>
 	<p class="text">Here are some interesting facts about David. Do you have any questions to contribute? Contact David to have your question answered!</p>
-	<span class="bio">
+	<span id="bio">
 	<table>
 	<tr>
 	<td rowspan="2000">
