--- a/bio.html
+++ b/bio.html
@@ -35,36 +35,36 @@
 <div id="row">
 	<!-- Side bar -->
 	<div id="side">
-	<h3 class="text"><a href="landarian.html">Landarian Labs</a></h3>
-	<p class="text">More information about the history and purpose of Landarian Labs.</p>
+	<h3><a href="landarian.html">Landarian Labs</a></h3>
+	<p >More information about the history and purpose of Landarian Labs.</p>
     <hr>
-	<h3 class="text"><a href="bio.html">David Landry's Bio</a></h3>
-	<p class="text">Learn some facts about the life of David Landry.</p>
+	<h3 ><a href="bio.html">David Landry's Bio</a></h3>
+	<p >Learn some facts about the life of David Landry.</p>
     <hr>
-	<h3 class="text"><a href="zebra.html">Why zebras?</a></h3>
-	<p class="text">Why are there so many zebras?</p>
+	<h3 ><a href="zebra.html">Why zebras?</a></h3>
+	<p >Why are there so many zebras?</p>
 	</div>
 	
 	
 	
 	<!-- Main content -->
 	<div id="main">
-	<h2 class="text">David Landry's Bio</h2>
-	<p class="text">Here are some interesting facts about David. Do you have any questions to contribute? Contact David to have your question answered!</p>
+	<h2 >David Landry's Bio</h2>
+	<p >Here are some interesting facts about David. Do you have any questions to contribute? Contact David to have your question answered!</p>
 	<span id="bio">
 	<table>
 	<tr>
 	<td rowspan="2000">
 	<!-- Easthampton -->
-    <img class="bioImage" src="easthampton.jpg" alt="Welcome sign for Easthampton, MA." onclick="createModal(this.src, this.alt)"><br>
+    <img class="bioImage" src="easthampton.jpg" alt="Welcome sign for Easthampton, MA." onclick="createModal(this.src, this.alt)"><br />
 
     <!-- Tree -->
-	<img class="bioImage" src="tree.jpg" alt="Around my neighborhood" onclick="createModal(this.src, this.alt)"><br>
-	<img class="bioImage" src="uwb.jpg" alt="At the University of Washington, Bothell" onclick="createModal(this.src, this.alt)"><br>
-	<img class="bioImage" src="generations.jpg" alt="Four generations" onclick="createModal(this.src, this.alt)"><br>
-	<img class="bioImage" src="mom.jpg" alt="Mom" onclick="createModal(this.src, this.alt)"><br>
-	<img class="bioImage" src="dad.jpg" alt="Dad" onclick="createModal(this.src, this.alt)"><br>
-    <img class="bioImage" src="tet.jpg" alt="Lunar New Year with friends" onclick="createModal(this.src, this.alt)"><br>
+	<img class="bioImage" src="tree.jpg" alt="Around my neighborhood" onclick="createModal(this.src, this.alt)"><br />
+	<img class="bioImage" src="uwb.jpg" alt="At the University of Washington, Bothell" onclick="createModal(this.src, this.alt)"><br />
+	<img class="bioImage" src="generations.jpg" alt="Four generations" onclick="createModal(this.src, this.alt)"><br />
+	<img class="bioImage" src="mom.jpg" alt="Mom" onclick="createModal(this.src, this.alt)"><br />
+	<img class="bioImage" src="dad.jpg" alt="Dad" onclick="createModal(this.src, this.alt)"><br />
+    <img class="bioImage" src="tet.jpg" alt="Lunar New Year with friends" onclick="createModal(this.src, this.alt)"><br />
 	
 	<!-- The Modal -->
     <div id="myModal" class="modal">
